# Rust-Examples

./: .gitignore  LICENSE  README.md
ECS_Library/: Cargo.toml
WASM/: Readme.md
WASM/react_canvas/rust_wasm/: Cargo.toml
WASM/react_canvas/rust_wasm/src/: lib.rs
actix_examples/: Readme.md
actix_examples/actix_tweets/: .env  Cargo.toml
actix_examples/actix_tweets/migrations/2023-02-19-200151_create_tweets/: down.sql  up.sql
actix_examples/actix_tweets/src/: handlers.rs  main.rs  models.rs  schema.rs
actix_examples/rendering_dynamic_templates/: Cargo.toml
actix_examples/rendering_dynamic_templates/src/: main.rs
actix_examples/rendering_dynamic_templates/static/: index.html
artificial_intelligence/: Readme.md
axum_examples/: Readme.md
axum_examples/routing/: Cargo.toml
axum_examples/routing/src/: lib.rs  main.rs
axum_examples/routing/src/routes/: hello_world.rs  mirror_body_json.rs  mirror_body_string.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  path_variables.rs  query_params.rs
benchmark/: Cargo.toml
dioxus/hello-dioxus/: Cargo.toml  Dioxus.toml
dioxus/hello-dioxus/assets/: main.css
dioxus/hello-dioxus/src/: main.rs
full_stack/react/actix_react_chat/: .env  .gitignore  Cargo.toml  Readme.md
full_stack/react/actix_react_chat/src/: db.rs  main.rs  routes.rs
full_stack/react/actix_react_chat/ui/: README.md  package-lock.json  package.json
full_stack/react/todo_reactix/api/: .env  Cargo.toml
full_stack/react/todo_reactix/api/migrations/2023-03-16-125847_create_todos/: up.sql
full_stack/react/todo_reactix/api/src/: main.rs  schema.rs
full_stack/react/todo_reactix/api/src/todos/: db.rs  mod.rs  models.rs  routes.rs
rocket-db/: .env  Cargo.toml
rocket-db/contrib/db_pools/: README.md
rocket-db/contrib/db_pools/codegen/: Cargo.toml
rocket-db/contrib/db_pools/codegen/tests/ui-fail-nightly/: database-syntax.stderr  database-types.stderr
rocket-db/contrib/db_pools/codegen/tests/ui-fail-stable/: database-types.stderr
rocket-db/contrib/db_pools/lib/: Cargo.toml
rocket-db/contrib/db_pools/lib/src/: lib.rs  pool.rs
rocket-db/contrib/dyn_templates/: Cargo.toml
rocket-db/contrib/dyn_templates/src/: lib.rs
rocket-db/contrib/sync_db_pools/: README.md
rocket-db/contrib/sync_db_pools/codegen/: Cargo.toml
rocket-db/contrib/sync_db_pools/codegen/src/: database.rs
rocket-db/contrib/sync_db_pools/codegen/tests/ui-fail-nightly/: database-syntax.stderr  database-types.stderr
rocket-db/contrib/sync_db_pools/codegen/tests/ui-fail-stable/: database-syntax.stderr  database-types.stderr
rocket-db/contrib/sync_db_pools/lib/: Cargo.toml
rocket-db/contrib/sync_db_pools/lib/src/: lib.rs  poolable.rs
rocket-db/core/codegen/: Cargo.toml
rocket-db/core/codegen/src/: lib.rs
rocket-db/core/codegen/src/bang/: test_guide.rs
rocket-db/core/codegen/tests/: async-entry.rs  from_form.rs
rocket-db/core/codegen/tests/ui-fail/: from_form.rs
rocket-db/core/codegen/tests/ui-fail-nightly/: async-entry.rs  async-entry.stderr  bad-ignored-segments.stderr  catch.rs  catch.stderr  catch_type_errors.rs  catch_type_errors.stderr  from_form.stderr  from_form_field.stderr  from_form_type_errors.stderr  responder-types.stderr  responder.rs  responder.stderr  route-attribute-general-syntax.rs  route-attribute-general-syntax.stderr  route-path-bad-syntax.stderr  route-type-errors.rs  route-type-errors.stderr  route-warnings.stderr  typed-uri-bad-type.stderr  typed-uris-bad-params.rs  typed-uris-bad-params.stderr  typed-uris-invalid-syntax.rs  typed-uris-invalid-syntax.stderr  uri_display.stderr  uri_display_type_errors.stderr
rocket-db/core/codegen/tests/ui-fail-stable/: async-entry.stderr  bad-ignored-segments.rs  bad-ignored-segments.stderr  catch.stderr  catch_type_errors.stderr  catchers.rs  from_form.rs  from_form.stderr  from_form_field.rs  from_form_type_errors.rs  responder-types.rs  responder-types.stderr  route-attribute-general-syntax.stderr  route-path-bad-syntax.rs  route-path-bad-syntax.stderr  route-type-errors.stderr  route-warnings.rs  routes.rs  typed-uri-bad-type.rs  typed-uri-bad-type.stderr  typed-uris-bad-params.stderr  typed-uris-invalid-syntax.stderr  uri_display.rs  uri_display_type_errors.rs  uri_display_type_errors.stderr
rocket-db/core/http/: Cargo.toml
rocket-db/core/http/src/: ext.rs  hyper.rs  lib.rs  listener.rs
rocket-db/core/http/src/header/: content_type.rs  media_type.rs
rocket-db/core/http/src/parse/: checkers.rs
rocket-db/core/http/src/parse/uri/: parser.rs  tables.rs  tests.rs
rocket-db/core/http/src/tls/: listener.rs  mtls.rs  util.rs
rocket-db/core/http/src/uri/: segments.rs  uri.rs
rocket-db/core/lib/: Cargo.toml  build.rs
rocket-db/core/lib/fuzz/: Cargo.toml
rocket-db/core/lib/src/: cookies.rs  error.rs  ext.rs  lib.rs  log.rs  mtls.rs  phase.rs  rocket.rs  server.rs
rocket-db/core/lib/src/config/: config.rs  shutdown.rs  tls.rs
rocket-db/core/lib/src/data/: from_data.rs
rocket-db/core/lib/src/fairing/: ad_hoc.rs  fairings.rs  info_kind.rs  mod.rs
rocket-db/core/lib/src/form/: form.rs  from_form.rs  lenient.rs  mod.rs  parser.rs  validate.rs
rocket-db/core/lib/src/form/name/: buf.rs  view.rs
rocket-db/core/lib/src/fs/: temp_file.rs
rocket-db/core/lib/src/local/: client.rs
rocket-db/core/lib/src/local/asynchronous/: client.rs  request.rs
rocket-db/core/lib/src/local/blocking/: client.rs  request.rs
rocket-db/core/lib/src/request/: from_request.rs  mod.rs  request.rs
rocket-db/core/lib/src/response/: redirect.rs  responder.rs
rocket-db/core/lib/src/response/stream/: sse.rs
rocket-db/core/lib/src/route/: uri.rs
rocket-db/core/lib/src/serde/: json.rs  mod.rs  msgpack.rs  uuid.rs
rocket-db/core/lib/src/shield/: policy.rs
rocket-db/core/lib/tests/: form-validation-names.rs  mount_point.rs  timer-on-attach.rs  uri-percent-encoding-issue-808.rs
rocket-db/migrations/2021-11-14-094821_create_posts/: up.sql
rocket-db/src/: main.rs
rocket-db/src/diesel_mysql/: mod.rs  models.rs
rocket-db/templates/: index.html.tera  macros.html.tera  success.html.tera
(+138 files in other folders)
