[package]
name = "rocket-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { path = "core/lib", features = ["json"]}

[dependencies.rocket_dyn_templates]
path = "contrib/dyn_templates"
features = ["tera"]
