[package]
name = "actix_tweets"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
chrono = {version = "0.4.23", features = ["serde"]}
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.93"
