[package]
name = "rendering_dynamic_templates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
serde_json = "1.0.91"
handlebars = { version = "4.3.6", features = ["dir_source"]}