[package]
name = "rust_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.85"

[dependencies.web-sys]
version = "0.3.62"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement"
]
