[package]
name = "rocket"
version = "0.5.0-rc.1"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = """
Web framework with a focus on usability, security, extensibility, and speed.
"""
documentation = "https://api.rocket.rs/v0.5-rc/rocket/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../../README.md"
keywords = ["rocket", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
build = "build.rs"
categories = ["web-programming::http-server"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
tls = ["rocket_http/tls"]
mtls = ["rocket_http/mtls", "tls"]
secrets = ["rocket_http/private-cookies"]
json = ["serde_json", "tokio/io-util"]
msgpack = ["rmp-serde", "tokio/io-util"]
uuid = ["uuid_", "rocket_http/uuid"]

[dependencies]
# Serialization dependencies.
serde_json = { version = "1.0.26", optional = true }
rmp-serde = { version = "0.15.0", optional = true }
uuid_ = { package = "uuid", version = "0.8", optional = true, features = ["serde"] }

# Non-optional, core dependencies from here on out.
futures = { version = "0.3.0", default-features = false, features = ["std"] }
yansi = "0.5"
log = { version = "0.4", features = ["std"] }
num_cpus = "1.0"
time = { version = "0.3", features = ["macros", "parsing"] }
memchr = "2" # TODO: Use pear instead.
binascii = "0.1"
atty = "0.2"
ref-cast = "1.0"
atomic = "0.5"
parking_lot = "0.11"
ubyte = {version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10.6", features = ["toml", "env"] }
rand = "0.8"
either = "1"
pin-project-lite = "0.2"
indexmap = { version = "1.0", features = ["serde-1", "std"] }
tempfile = "3"
async-trait = "0.1.43"
async-stream = "0.3.2"
multer = { version = "2", features = ["tokio-io"] }
tokio-stream = { version = "0.1.6", features = ["signal", "time"] }
state = "0.5.1"

[dependencies.rocket_codegen]
version = "0.5.0-rc.1"
path = "../codegen"

[dependencies.rocket_http]
version = "0.5.0-rc.1"
path = "../http"
features = ["serde"]

[dependencies.tokio]
version = "1.6.1"
features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"]

[dependencies.tokio-util]
version = "0.6"
default-features = false
features = ["io"]

[dependencies.bytes]
version = "1.0"

[build-dependencies]
yansi = "0.5"
version_check = "0.9.1"

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
pretty_assertions = "0.7"
