[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.0"
actix-files = "0.6.2"
actix-cors = "0.6.4"
chrono = {version = "0.4.23", features = ["serde"]}
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.93"
uuid = { version = "1.3.0", features = ["v4", "serde"] }